fix: related products header wrapping on small viewports

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -186,6 +186,9 @@ a.product-form-cart-linker-link
   align-items: center
   margin-bottom: 30px
 
+  @media screen and (max-width: $break-small)
+    display: block
+
   .related-products-title
     font-size: 1.75rem
     margin-bottom: 0
